--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 44px;
 }
 
 h2 {
@@ -91,8 +91,20 @@ ol ul {
 
 .image-wrapper {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 4%;
     margin: 2% 0%;
+}
+
+.image-wrapper img {
+    min-width: 200px;
+    max-width: 85%;
+    flex: 1 0 500px;
+}
+
+.caption {
+    flex: 1 0 40%;
 }
 
 .caption p, .caption ul, .caption ol{
@@ -149,9 +161,4 @@ ol ul {
 
 #questions-box {
     margin: 2% 0%;
-}
-
-#sketch {
-    max-width: 70%;
-    min-width: 50%;
 }
